# thesis

./: CMakeLists.txt  README.md  conanfile.txt  project-srun.sh
docs/: README.md
include/: mmio.c
src/: CMakeLists.txt  config.cpp  cpu.cpp  ipu.cpp  main.cpp  matrix.cpp  matrix.hpp  report.cpp
src/codelets/: Addition.cpp  MatrixBlock.cpp  Reducer.cpp  ReducerToVector.cpp
src/codelets/bfs/: MatrixBlock.cpp  MatrixBlockBFS.cpp  Normalize.cpp  ReducerBFS.cpp
src/codelets/bfs_old/: MatrixBlockBFS.cpp  ReducerBFS.cpp  ReducerRowBFS.cpp  ReducerRowBFSMulti.cpp
src/codelets/prims/: GatherResult.cpp  PrimsBlock.cpp  ReduceBlock.cpp  SubReduceBlock.cpp
src/codelets/spmv/: MatrixBlock.cpp  ReducerToVector.cpp
src/experiments/: MatrixVectorMult.cpp  breadth_first_search.cpp  breadth_first_search_old.cpp  prims_algorithm.cpp  sparse_matrix_vector_mult.cpp
src/tests/: matrix_block_codelet.cpp
